<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <ImageView
        android:id="@+id/icon"
        android:layout_width="177dp"
        android:layout_height="214dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:padding="20dp"
        android:src="@drawable/ic_user_add" />

    <EditText
        android:id="@+id/nameEditText"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/icon"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        android:hint="@string/name"
        android:padding="10dp"
        android:background="@drawable/rounded_edittext"
        android:inputType="textPersonName"
        android:textColor="#8D8D8D"
        android:textColorHint="#8D8D8D" />

    <EditText
        android:id="@+id/palindromeEditText"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/nameEditText"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:hint="@string/palindrome"
        android:padding="10dp"
        android:background="@drawable/rounded_edittext"
        android:inputType="text"
        android:textColor="#8D8D8D"
        android:textColorHint="#8D8D8D" />

    <Button
        android:id="@+id/checkButton"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/palindromeEditText"
        android:layout_marginTop="50dp"
        android:layout_centerHorizontal="true"
        android:text="@string/check"
        android:background="@drawable/rounded_button"
        android:textColor="#FFFFFF" />

    <Button
        android:id="@+id/nextButton"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/checkButton"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:text="@string/next"
        android:background="@drawable/rounded_button"
        android:textColor="#FFFFFF" />

</RelativeLayout>
